--- a/Proyecto_SM/app/src/main/res/values/strings.xml
+++ b/Proyecto_SM/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="direccionnoop">Dirección:</string>
     <string name="publicar">Publicar</string>
     <string name="titulop">Titulo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
